source/stylesheets/style.scss
html {
  height: 100%;
}

body {
  font-family: $regular_text, sans-serif;
  font-size: 14px;
  line-height: 1;
  color: #333;
  height: 100%;
}

#wrapper {
  min-height: 100%;
  position: relative;
  padding-bottom: 150px;
}

a {
  font-family: $bold_text;
  font-weight: normal;
  text-decoration: none;
}

h1 {
  font-size: 40px;
  font-weight: normal;
}

h2 {
  color: white;
  font-family: $bold_text;
  font-size: 24px;
  margin-bottom: 20px;
}

h3 {
  font-size: 20px;
  font-family: $bold_text;
}

h4 {
  font-size: 15px;
  padding: 0;
  margin: 0;
}

header#main-header {
  @include fill-parent;
  background: image-url('header.jpg') no-repeat;
  background-size: cover;
  background-position: 50% 50%;
  max-height: 400px;
  padding-bottom: 8%;
  margin-bottom: 20px;

  .introduction > h1 {
    color: white;
  }
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  text-align: center;

  a {
    color: $link;
  }

  p {
    color: $dark_text;
  }
}

p {
  line-height: 1.2;
  font-size: 20px;
  margin-bottom: 20px;
}

section {
  @include fill-parent();
  padding-top: 30px;

  a {
    color: #A76262;
  }

  &.dark {
    background-color: $dark_text;
    color: white;

    p {
      color: white;
    }
  }

  &.red {
    a {
      color: white;
    }
  }
}

#meeting-and-navigation {
  padding-top: 0px;
  padding-bottom: 15px;
}

.catch-phrase {
  @include animation(drop 2s 1);
}

.container {
  @include outer-container(68em);
}

#getting-started {
  padding-bottom: 40px;
  margin-bottom: 20px;

  p:last-child {
    padding-top: 20px;
    margin-bottom: 0px;
  }

  p {
    text-align: justify;
  }
}

.info-column {
  @include span-columns(4);
  @include omega(3n);

  .mega-octicon {
    margin-left: 45%;
  }

  h2 {
    text-align: center;
  }
}

.introduction {
  @include span-columns(8);
  @include shift(2);
  text-align: center;

  h1 {
    margin-top: 0px;
  }
}

.logo-container {
  @include span-columns(12);

  h1 {
    margin: 0;
  }

  .logo {
    font-size: 30px;
    text-align: center;

    span {
      position: relative;
      font-size: 20px;
      top: -3px;
    }
  }

}

.nav {
  font-family: $bold_text;
  padding-bottom: 40px;
  text-align: center;
  border-bottom: 2px solid #eee2e2;
  font-size: 18px;

  .mega-octicon {
    font-size: 18px;
  }

  .nav-item {
    @include span-columns(4);
    @include omega(3n);

    a {
      @include transition(all .4s);
      color: $dark_text;
      opacity: .4;
      &:hover {
        opacity: 1;
      }
    }
  }
}

#next-meeting {
  font-size: 40px;
}

#next-meeting-date {
  font-family: $bold_text;
}

.presentation {
  font-size: 20px;
  margin-bottom: 15px;

  .mega-octicon {
    font-size: 20px;
    margin-right: 18px;
  }

  span {
    margin-bottom: 20px;
  }
}

.user-auth-container {
  @include span-columns(3);
  padding-top: 2px;
  font-size: 14px;
  text-transform: uppercase;

  a {
    float: right;
  }

  &:hover > a > .mega-octicon {
    @include transform (rotate(360deg));
  }
}

.sponsor-container{
  @include fill-parent;
  @include outer-container;
  .sponsor-row {
    @include span-columns(12);
    .sponsor-list {
      @include span-columns(6);
      @include shift(3);
      li {
        list-style-type: none;
        // @include span-columns(3 of 6);
        @include span-columns(6 of 6);
        @include omega(2n);
        @include media($mobile) {
          @include span-columns(6 of 6);
          @include omega(1n);
        }
      }
    }
  }
}

.user-auth-navbar {
  @include fill-parent;
  color: white;
  background: rgba(white, .1);
  border-bottom: 4px solid rgba(white, .14);
  padding: 8px 0 12px;
  margin-bottom: 80px;

  a {
    color: white;
  }
}

.cwdg-sponsor-logo {
  height: 30px;
}

.meetings,
.resources,
.officers {
  padding-top: 0;
  padding-bottom: 20px;
  color: $dark-text;

  h2 {
    font-size: 35px;
    text-align: center;
    color: inherit;
  }

  li {
    font-size: 20px;
  }
}

.meetings {
  ul {
    padding-left: 0;

    li {
      list-style: none;
      padding-bottom: 15px;
    }
  }
}

.officers {
  @include row();

  .officer-panel {
    @include span-columns(3);
    float: left;

    @include media($tablet) {
      // For some reason now 8 columns wide?
      @include span-columns(4);
      @include omega(2n);
    }

    @include media($mobile) {
      // For some reason now 4 columns wide?
      @include span-columns(4);
    }

    img {
      width: 100%;
    }
  }
}

